# Deep_Research_Agent

./: .gitignore  README.md
assad_rag/: README.md  setup.py
assad_rag/researcher/: pyproject.toml
assad_rag/researcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assad_rag/researcher/src/researcher/: logic.py  main.py  tools.py
assad_rag/researcher/src/researcher/templates/: index.html
researcher/src/researcher/: logic.py  main.py  pdf_file.py  sample.md  tools.py
researcher/src/researcher/templates/: index.html
